--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>feedback</title>
 </head>
 <body>
-    
+    <div class="card">
+<div>
+    <img src="./images/icon-star.svg" alt="esrtrela laranja">
+</div>
+<h1> como foi o atendimento?</h1>
+<p>conte-nos como foi nossa ajuda com sua soliçitação. Agradecemos muito seu feedback para podemos melhorar nosso atrendimento! </p>
+<div>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+</div>
+
+    </div>
 </body>
 </html>
