terceiro commit do html

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
     <div class="card">
-<div>
+<div class="estrela">
     <img src="./images/icon-star.svg" alt="esrtrela laranja">
 </div>
 <h1> como foi o atendimento?</h1>
 <p>conte-nos como foi nossa ajuda com sua soliçitação. Agradecemos muito seu feedback para podemos melhorar nosso atrendimento! </p>
-<div>
+<div class="notas">
     <button>1</button>
     <button>2</button>
     <button>3</button>
     <button>4</button>
     <button>5</button>
 </div>
-
+<button>enviar</button>
     </div>
 </body>
 </html>
