quinto commit do css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 <h1> como foi o atendimento?</h1>
 <p>conte-nos como foi nossa ajuda com sua soliçitação. Agradecemos muito seu feedback para podemos melhorar nosso atrendimento! </p>
-<div class="notas">
+<div class="botoes">
     <button>1</button>
     <button>2</button>
     <button>3</button>
