--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <button>4</button>
     <button>5</button>
 </div>
-<button>enviar</button>
+
+<a href="">enviar</a>
     </div>
 </body>
 </html>
