--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="agradecimento.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>feedback-agradecimento</title>
 </head>
 <body>
     <div class="card">
         <img src="../images/illustration-thank-you.svg" alt="ilustração de agradecimento">
+        <p>você selecionou 4 de 5</p>
+        <h1>obrigado!</h1>
+        <p>Conte-nos como foi nossa ajuda com sua solicitação. Agradecemos muito seu feedback para podermos melhorar nosso atendimento!</p>
+
     </div>
 </body>
 </html>
