terceiro do agradecimento.html e quarto do css

--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -12,7 +12,8 @@
 <body>
     <div class="card">
         <img src="../images/illustration-thank-you.svg" alt="ilustração de agradecimento">
-        <p>você selecionou 4 de 5</p>
+
+        <p class="paragrafo_nota">você selecionou 4 de 5 </p>
         <h1>obrigado!</h1>
         <p>Conte-nos como foi nossa ajuda com sua solicitação. Agradecemos muito seu feedback para podermos melhorar nosso atendimento!</p>
 
